tests/compile_errors/008-error-message.buzz
| Hello world
fun fail() > void !> obj{ str message } {
    throw .{ message = "Hello world" };
}

fun depth() > void !> obj{ str message } {
    fail();
}

test "Throwing an object instance with a message field" {
    depth();
}